# wasm-pack-simd-template

./: Cargo.toml  Readme.md
src/: lib.rs  utils.rs
tests/: bench.rs  web.rs
