[package]
name = "wasm-pack-simd-template"
version = "0.1.0"
authors = ["authors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# The `console_error_panic_hook` crate provides better debugging of panics by
console_error_panic_hook = { version = "0.1.7", optional = true }


# For smaller wasm package sice we use wee_alloc global allocator
# This makes a difference espetially for small packages
# see https://rustwasm.github.io/book/game-of-life/code-size.html
wee_alloc = { version = "0.4.5", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true


[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '--enable-simd']
