[package]
name = "wasm-pack-simd-template"
version = "0.1.0"
authors = ["authors"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["talc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# The `console_error_panic_hook` crate provides better debugging of panics by
console_error_panic_hook = { version = "0.1.7", optional = true }

# See https://github.com/SFBdragon/talc/blob/master/talc/README_WASM.md
# wee_alloc should not be used anymore!
talc = { version = "4.4.1", optional = true }

[build]
target = "wasm32-unknown-unknown"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true


[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-simd']
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '--enable-simd']
